// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegularSpec 1`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          id="mode-checkbox-«r0»"
          name="mode-checkbox-«r0»"
          type="checkbox"
        />
        <label
          class="mode-entry-label"
          for="mode-checkbox-«r0»"
          style="margin-bottom: 0px; font-weight: normal;"
        >
          Run HTTP/S Proxy
        </label>
        <div
          class="mode-popover"
        >
          <button
            popovertarget="«r1»"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings icon icon-settings"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
          <div
            id="«r1»"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        class="mode-status"
      >
        <div>
          <div
            class="text-success"
          >
            HTTP(S) proxy listening at 127.0.0.1:8080 and [::1]:8080.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RegularSpec 2`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          id="mode-checkbox-«r2»"
          name="mode-checkbox-«r2»"
          type="checkbox"
        />
        <label
          class="mode-entry-label"
          for="mode-checkbox-«r2»"
          style="margin-bottom: 0px; font-weight: normal;"
        >
          Run HTTP/S Proxy
        </label>
        <div
          class="mode-popover"
        >
          <button
            popovertarget="«r3»"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings icon icon-settings"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
          <div
            id="«r3»"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        class="mode-status"
      >
        <div
          class="text-danger"
        >
          port already in use
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
